tests/baselines/reference/typeLookupInIIFE.errors.txt
a.js(3,15): error TS2694: Namespace 'ns' has no exported member 'NotFound'.


==== a.js (1 errors) ====
    // #22973
    var ns = (function() {})();
    /** @type {ns.NotFound} */
                  ~~~~~~~~
!!! error TS2694: Namespace 'ns' has no exported member 'NotFound'.
    var crash;
    